package main;

public class ExcepcionesPropias extends Exception {
    public ExcepcionesPropias(String mensaje) {
        super(mensaje);
    }
}